# INF

./: main.py  options.py  pyproject.toml  ref_ext.json  requirements.txt  transforms.py  util.py  util_vis.py
camera/: pinhole.py
data/: HDL64E.py  base.py  pinhole.py  waymo.py
model/: base.py  density.py  modelwrapper.py  multicolor.py
options/: color_kitti-360_cam0.yaml  color_kitti-360_cam1.yaml  color_kitti-360_cam2.yaml  color_kitti-360_cam3.yaml  color_waymo_cam0.yaml  color_waymo_cam1.yaml  color_waymo_cam2.yaml  color_waymo_cam3.yaml  color_waymo_cam4.yaml  density_kitti-360.yaml  density_kitti-360_large_zigzag.yaml  density_kitti-360_largerot.yaml  density_kitti-360_small_rot.yaml  density_kitti-360_straight.yaml  density_kitti-360_zigzag.yaml  density_known_outdoor.yaml  density_poses_kitti-360.yaml  density_waymo-226.yaml  density_waymo-362.yaml  density_waymo-7553.yaml  density_waymo-81.yaml
options/bases/: base.yaml  base_color.yaml  base_color_kitti-360.yaml  base_color_waymo.yaml  base_density.yaml  base_kitti_largerot.yaml  base_kitti_straight.yaml  base_kitti_zigzag.yaml
preprocess/: generate_poses_npy.py  prepare_ext_json.py  prepare_images.py  prepare_scans.py  prepare_scans_w_channels.py  prepare_scans_waymo.py  tmp.py
scripts/: aggregate_batch.py  baseline_test.sh  batch_test-kitti.py  batch_test-waymo.py  batch_test.py  make_pose_prior.py  post_process.py  preprocess-waymo.sh  preprocess.sh
