[project]
name = "inf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py>=2.3.1",
    "addict>=2.4.0",
    "asttokens>=3.0.0",
    "attrs>=25.3.0",
    "av>=15.1.0",
    "blinker>=1.9.0",
    "cachetools>=5.5.2",
    "certifi>=2025.8.3",
    "charset-normalizer>=3.4.3",
    "click>=8.3.0",
    "cmake>=4.1.0",
    "comm>=0.2.3",
    "configargparse>=1.7.1",
    "cycler>=0.12.1",
    "dash>=3.2.0",
    "dash-core-components>=2.0.0",
    "dash-html-components>=2.0.0",
    "dash-table>=5.0.0",
    "decorator>=5.2.1",
    "easydict>=1.13",
    "exceptiongroup>=1.3.0",
    "executing>=2.2.1",
    "fastjsonschema>=2.21.2",
    "filelock>=3.19.1",
    "flask>=3.1.2",
    "fonttools>=4.60.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "grpcio>=1.75.0",
    "idna>=3.10",
    "imageio>=2.37.0",
    "importlib-metadata>=8.7.0",
    "ipython>=8.37.0",
    "ipywidgets>=8.1.7",
    "itsdangerous>=2.2.0",
    "jedi>=0.19.2",
    "jinja2>=3.1.6",
    "joblib>=1.5.2",
    "jsonschema>=4.25.1",
    "jsonschema-specifications>=2025.9.1",
    "jupyter-core>=5.8.1",
    "jupyterlab-widgets>=3.0.15",
    "kiwisolver>=1.4.9",
    "lit>=18.1.8",
    "markdown>=3.9",
    "markupsafe>=3.0.2",
    "matplotlib>=3.10.6",
    "matplotlib-inline>=0.1.7",
    "mpmath>=1.3.0",
    "narwhals>=2.5.0",
    "nbformat>=5.10.4",
    "nest-asyncio>=1.6.0",
    "networkx>=3.4.2",
    "numpy==2.0.1",
    "nvidia-cublas-cu11>=11.11.3.6",
    "nvidia-cuda-cupti-cu11>=11.8.87",
    "nvidia-cuda-nvrtc-cu11>=11.8.89",
    "nvidia-cuda-runtime-cu11>=11.8.89",
    "nvidia-cudnn-cu11>=9.10.2.21",
    "nvidia-cufft-cu11>=10.9.0.58",
    "nvidia-curand-cu11>=10.3.0.86",
    "nvidia-cusolver-cu11>=11.4.1.48",
    "nvidia-cusparse-cu11>=11.7.5.86",
    "nvidia-nccl-cu11>=2.21.5",
    "nvidia-nvtx-cu11>=11.8.86",
    "oauthlib>=3.3.1",
    "open3d>=0.19.0",
    "packaging>=25.0",
    "pandas>=2.3.2",
    "parso>=0.8.5",
    "pexpect>=4.9.0",
    "pillow>=11.3.0",
    "platformdirs>=4.4.0",
    "plotly>=6.3.0",
    "prompt-toolkit>=3.0.52",
    "protobuf>=6.32.1",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pygments>=2.19.2",
    "pyparsing>=3.2.5",
    "pyquaternion>=0.9.9",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "referencing>=0.36.2",
    "requests>=2.32.5",
    "requests-oauthlib>=2.0.0",
    "retrying>=1.4.2",
    "rpds-py>=0.27.1",
    "rsa>=4.9.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "six>=1.17.0",
    "stack-data>=0.6.3",
    "sympy>=1.14.0",
    "tensorboard>=2.20.0",
    "tensorboard-data-server>=0.7.2",
    "termcolor>=3.1.0",
    "threadpoolctl>=3.6.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
    "triton>=3.4.0",
    "typing-extensions>=4.15.0",
    "tzdata>=2025.2",
    "urllib3>=2.5.0",
    "wcwidth>=0.2.14",
    "werkzeug>=3.1.3",
    "widgetsnbextension>=4.0.14",
    "zipp>=3.23.0",
]
